syntax = "proto3";
import "google/protobuf/empty.proto";

package proto;

option go_package = "github.com/MKKL1/schematic-app/server/internal/pkg/genproto";

service FileService {
  rpc UploadTempFile(stream UploadTempRequest) returns (google.protobuf.Empty);
}

message FileMetadata {
  string file_name = 1;
  int64 size = 2;
  string content_type = 3;
}

message UploadTempRequest {
  oneof payload {
    FileMetadata metadata = 1;
    bytes data = 2;
  }
}